# aprilflow-sdk

./: README.md
aprilflow-java-sdk/: .gitignore  README.md  TESTING.md  pom.xml
aprilflow-java-sdk/src/main/java/aprilflow/sdk/: AprilFlowClient.java  AprilFlowClientBuilder.java  AprilFlowException.java
aprilflow-python-sdk/: README.md  TESTING.md  pyproject.toml
aprilflow-python-sdk/aprilflow/: __init__.py  auth.py  client.py  exceptions.py  http.py
aprilflow-python-sdk/aprilflow/models/: __init__.py  base.py  billing.py  collection.py  document.py  identity.py  message.py  notification.py  prompt.py  upload.py
aprilflow-python-sdk/aprilflow/resources/: __init__.py  billing.py  collection.py  document.py  identity.py  message.py  notification.py  prompt.py  upload.py
aprilflow-python-sdk/tests/: conftest.py  test_auth.py  test_http.py  test_models.py  test_notifications.py  test_resources.py
aprilflow-python-sdk/tests/integration/: conftest.py  test_collection_live.py  test_country_live.py  test_document_live.py  test_message_live.py  test_policy_live.py  test_prompt_live.py  test_quota_live.py  test_upload_live.py  test_user_key_live.py  test_user_live.py
aprilflow-scraper/: .gitignore  README.md  pyproject.toml
aprilflow-scraper/src/scraper/: __main__.py  cli.py  config.py  shell.py  state.py
aprilflow-scraper/src/scraper/handlers/: collections.py  scrape.py  upload.py
aprilflow-scraper/src/scraper/profiles/: cssf.py
aprilflow-scraper/src/scraper/profiles/cssf_spider/: common.py  spider.py
(+112 files in other folders)
