[project]
name = "aprilflow"
version = "0.1.0"
description = "Python SDK for AprilFlow APIs"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "pydantic>=2.7"]

[project.optional-dependencies]
test = ["pytest", "respx", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that require a live AprilFlow API and credentials",
]
